--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = "^25.1.0"
 isort = "^6.0.0"
 mypy = "^1.15.0"
 poetry = "^2.1.1"
+pytest = "^8.3.4"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
