--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ pytest-mock = "^3.14.0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+markers = [
+    "integ: integration tests", # For integration tests
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
